- fixed SpawnPool.AutoSpawns simply to reflect whether there it has at least one SpawnEntry that has AutoSpawns = true