@@ -1,1 +1,6 @@
-- fixed SpawnPool.AutoSpawns simply to reflect whether there it has at least one SpawnEntry that has AutoSpawns = true
+- fixed the bug where a spawn point does not stop spewing out new objects
+- fixed SpawnPoint to not respawn on it's own, but let the pool decide instead
+- added NPCEntry.Deleted event
+- fixed SpawnPools to not select SpawnPoints that have AutoSpawns set to false
+- resurrected NPCs are re-added into their pool's AIGroup
+- fixed up UtgardeKeep to keep track of dead skeletons
